# bcloud

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt
bcloud/: App.py  BTBrowserDialog.py  SigninDialog.py  auth.py  const.py  gutil.py  net.py  pcs.py
debian/: changelog  control  copyright  rules  watch
po/: bcloud.pot  zh_CN.po  zh_TW.po
